--- a/requirements.txt
+++ b/requirements.txt
@@ -18,11 +18,11 @@ flake8==5.0.4
 black==23.3.0
 
 # Testing dependencies
-nose==1.3.7
-pinocchio==0.4.3
-factory-boy==3.2.1
-coverage==7.1.0
-httpie==3.2.1
+pynose
+pinocchio
+factory-boy
+coverage
+httpie
 
 # Behavior Driven Development
 behave==1.2.6
